@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model - US20 Register a Green Space



class PostCode{
    postCodeNumber
    localization
}
class Collaborator {
    name
    dateOfBirth
    admissionDate
    phoneNumber
    taxpayerNumber
    email
}

class GreenSpace {
    name
    area
}

class Document{
    number
}

class DocumentType{
    type
}

class Address {
    street
    doorNumber
}

class GreenSpaceManager {
}

class Garden {
}

class MediumPark {
}

class LargePark {
}


Collaborator "1" - "1" Document : has >

Collaborator "1..*" -- "1" Address : lives >

Collaborator  <|--  GreenSpaceManager

GreenSpaceManager "1" -- "*" GreenSpace : register/manages >
GreenSpace "1" -- "1" Address : is located in >

GreenSpace <|-- Garden
GreenSpace <|-- MediumPark
GreenSpace <|-- LargePark

Address "1..*" -- "1" PostCode : has >

Document "1..*" - "1" DocumentType : has >


@enduml